<resources>
    <string name="app_name">My Diary</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_details">Details</string>
    <string name="delete">Delete</string>
    <string name="title_activity_create_note">CreateNote</string>
    <string name="create_note">create note</string>
    <string name="note">Note</string>
    <string name="note_name">Note name</string>
    <string name="title_activity_login">My Diary</string>
    <string name="title_activity_registration">Registration</string>
    <string name="name">Your Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="user_login">user_name</string>
    <string name="user_password">user_password</string>
    <string name="how_are_you">How are you?</string>
    <string name="edit_note">Edit note</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="message_loading">Loading...</string>
    <string name="auth_failed">Auth failed</string>
    <string name="fields_not_walid">Fields are not valid.</string>
    <string name="sign_up">Sign up</string>
    <string name="message_registration_failed">Registration was failed.</string>
    <string name="message_pass_not_conf">Passwords dont confirm.</string>
    <string name="message_loading_failed">Sorry, loading was failed.</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="should_select_date_message">Pleace, select date to search</string>
    <string name="there_is_no_available_data">There is no available data =(</string>
    <string name="cant_add_more_images_message">Sorry, but you can add only 5 most beautiful images :(</string>
    <string name="error_image_adding">Can`t load image :(</string>
    <string name="mood_good">Good</string>
    <string name="mood_normal">Norm</string>
    <string name="mood_bad">Bad</string>
    <string-array name="mood_variants">
        <item>Good</item>
        <item>Normal</item>
        <item>Bad</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_your_notes">Your notes</string>
    <string name="settings">Settings</string>
    <string name="text_load_on_server_details">You have ability to load your notes to server.
        In this way you can`t lose your memories if you suddenly delete the app or open it with a new device.</string>
    <string name="text_load_from_server_details">Or, if you have account already, just load notes from your account!</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="message_notes_saved">Your notes was sucessfully saved</string>
    <string name="notification_come_back">Don`t forget to write about the most important in your life</string>
</resources>
