<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/medium_margin"
    android:paddingStart="@dimen/medium_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".create_note.CreateNoteActivity"
    tools:showIn="@layout/activity_create_note">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/large_margin"
        android:paddingTop="@dimen/large_margin">

        <EditText
            android:id="@+id/edit_text_name_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_details"
            android:hint="@string/note_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_text_name_create"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/how_are_you"
            android:textSize="@dimen/medium_text_size" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_view"
            android:layout_marginTop="@dimen/medium_margin" />

        <EditText
            android:id="@+id/edit_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/note"
            android:textSize="@dimen/medium_text_size" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/button_style"
            android:text="@string/create_note"
            android:textColor="@color/colorWhite" />


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
