<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".login.LoginActivity">

    <EditText
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_password_login"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/welcome_text_size"
        android:theme="@style/Theme.App.Base" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/welcome_text_size"
        android:theme="@style/Theme.App.Base" />

    <Button
        android:id="@+id/fab"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_text_password_login"
        android:layout_alignStart="@+id/edit_text_password_login"
        android:layout_below="@+id/edit_text_password_login"
        android:layout_marginTop="26dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="or"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_text_password_login"
        android:layout_alignStart="@+id/edit_text_password_login"
        android:layout_below="@+id/tv_sign_up"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:backgroundTint="@android:color/transparent" />

</RelativeLayout>
