<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registration"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.registration.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <EditText
        android:id="@+id/edit_text_name_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_password_registration"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_text_size"
        android:theme="@style/Theme.App.Base" />

    <EditText
        android:id="@+id/edit_text_password_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_text_password_confirm"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_text_size"
        android:theme="@style/Theme.App.Base" />

    <EditText
        android:id="@+id/edit_text_password_confirm"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_password_registration"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_text_size"
        android:theme="@style/Theme.App.Base" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_navigate_next_white_48dp"
        app:backgroundTint="@color/colorPrimaryDark" />
</RelativeLayout>
